[package]
name = "bit-set"
version = "0.5.0"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>", "Jonathan Strong <jstrong@legis.io>"]
license = "MIT/Apache-2.0"
description = "A set of bits [fork]"
repository = "https://github.com/jonathanstrong/bit-set"
keywords = ["data-structures", "bitset"]
readme = "README.md"

[dev-dependencies]
rand = "0.3"

[dependencies]
bit-vec = { git = "https://github.com/jonathanstrong/bit-vec.git", branch = "v0.5.x" }

[features]
default = ["nightly"]
nightly = []
